kubernetes/cluster/technitium/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  annotations:
    lbipam.cilium.io/ips: 192.168.1.82
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - { name: dns-tcp, port: 53, targetPort: dns-tcp, protocol: TCP }
    - { name: dns-udp, port: 53, targetPort: dns-udp, protocol: UDP }
---
apiVersion: v1
kind: Service
metadata:
  name: technitium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - { name: http, port: 5380, targetPort: http, protocol: TCP }
