kubernetes/cluster/technitium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-proxy
      namespace: kube-system
      sectionName: https
  hostnames:
    - dns.lan.jetersen.dev
  rules:
    - backendRefs:
        - name: technitium
          port: 5380
